--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -122,3 +122,30 @@ h2 {
 .signup-link a:hover {
     text-decoration: underline;
 }
+
+<!--implement loading spinner-->
+.loading-spinner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #1f293a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.loading-spinner img {
+    width: 50px;
+    height: 50px;
+}
+.loading-spinner.spinner-text {
+    font-size: 1.5em;
+    color: #0ef;
+    margin-top: 10px;
+}
+.loading-spinner.spinner-text span {
+    color: #2c4766;
+}
+
