--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,22 +1,30 @@
-
 <div class="parent">
-    <div class="container">
-        <div class="login-box">
-            <h2>Login</h2>
-            <form action="#">
-                <div class="input-box">
-                    <input type="email" [(ngModel)]="loginObj.EmailId" name="EmailId" required>
-                    <label>Email</label>
-                </div>
-                <div class="input-box">
-                    <input type="password" [(ngModel)]="loginObj.Password" name="Password" required>
-                    <label>Password</label>
-                </div>
-                
-                <button type="button" class="btn" (click)="onLogin()" >Login</button>
-                 
-            </form>
+  <div class="container">
+    <div class="login-box">
+      <h2>Login</h2>
+      <form action="#">
+        <div class="input-box">
+          <input type="email" [(ngModel)]="loginObj.EmailId" name="EmailId" required>
+          <label>Email</label>
         </div>
-        
+        <div class="input-box">
+          <input type="password" [(ngModel)]="loginObj.Password" name="Password" required>
+          <label>Password</label>
+        </div>
+
+        <button type="button" class="btn" (click)="onLogin()">Login</button>
+
+      </form>
     </div>
+    <!--  implementation of loading div feature-->
+    <div class="loading" *ngIf="loading">
+      <div class="spinner-border text-primary" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+      <h6>Please wait...</h6>
+    </div>
+
+
+  </div>
+
 </div>
